# ComparaisonsSyntaxiques

./: README.md  chaines_philosophie.html  pyproject.toml  requirements.txt
AnalysisScripts/: ParseAndVisualise.py  analyse_synthétique.py  compare_distances.py  compare_distances_3way.py  compare_structures_3way.py  inspect_corpus.py  run_all_3way.py  serve_conllu.py  visualise_conllu.py
Corpus/: philosophie.csv
Corpus/Copies/: Histoire_et_Violence.txt  L'imagination_nous_instruit_elle.txt  L_idee_de_perfection_16.txt  La_paix_est-elle_le_plus_grand_des_biens.txt  Lavenir-est-il-l-affaire-de-la-pensée.txt  Le_bonheur_est_il_affaire_de_hasard_ou_de_necessite.txt  Les choses ont-elles quelque chose en commun.txt  idee_perfection_19.txt  la_servitude_volontaire.txt  langage_et_realité.txt  le_commerce_des_corps.txt  le_vrai_et_le_réel.txt  que_peut_le_droit.txt
ParsingScripts/: Camembert.py  CamembertaHOPS.py  Stanza.py  accord_inter_modeles.py  download_model.py  orchestrator.py  prepare_corpus.py  structures_syntaxiques.py
TestCorpus/: 1000_SMS_transcodage.csv  1000_SMS_transcodage.ods  corpusdetails.md  parsingSMS.py
hopsparser/: main.py  parser.py
results/Philosophie/fsmb/: input_Texte.conllu  (+3 more)
results/comparaison_corpora/: resume_comparaison.txt
results/comparaison_distances/: rapport.csv  rapport.txt  rapport_3way.csv  rapport_3way.txt
results/comparaison_structures/: detail_par_modele.csv  rapport_structures_3way.txt  synthese_globale.csv  tests_statistiques.csv
results/inspection/: conllu_0001.html  conllu_0002.html  conllu_0003.html
(+62 files in other folders)
