[project]
authors = [
    { name = "Benoît Crabbé", email = "benoit.crabbe@univ-paris-diderot.fr" },
    { name = "Loïc Grobol", email = "lgrobol@parisnanterre.fr" },
]
dependencies = [
    "bidict",
    "boltons",
    "click >= 8.0.4, < 9.0.0",
    "fastapi",
    "fasttextlt",
    "huggingface-hub",
    "loguru",
    "numpy >= 2.1",
    "pooch",
    "pydantic >= 2.0, < 2.12",
    "pydantic-settings >= 2.0, < 2.10",
    "pyyaml",
    "rich",
    "sacremoses",
    "tabulate2",
    "torch >= 2.0.0, < 2.12.0",
    "transformers >= 4.19.0, < 5.0.0, != 4.23.0, != 4.23.1, != 4.51.0",
    "uvicorn",
]
description = "A graph dependency parser to tinker with"
keywords = ["nlp", "parsing"]
license = "MIT"
name = "hopsparser"
requires-python = ">= 3.11"
version = "0.8.0"

[project.urls]
"Source Code" = "https://github.com/hopsparser/hopsparser"

[project.optional-dependencies]
spacy = ["spacy >= 3.8, < 4.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
hopsparser = "hopsparser.main:cli"
eval_parse = "hopsparser.evaluator:main"

[tool.setuptools]
packages = ["hopsparser"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
